[package]
name = "mm1"
version = "0.6.1"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[features]
default = ["runtime", "sup", "timer"]

multinode = ["dep:mm1-message-codec", "dep:mm1-multinode"]
multinode-serde = ["multinode", "dep:mm1-message-codec-serde", "mm1-multinode/serde"]
multinode-serde-json = ["multinode-serde", "mm1-multinode/serde-json"]
runtime = ["dep:mm1-node"]
sup = ["dep:mm1-sup", "dep:mm1-proto-sup"]
test-util = ["dep:mm1-test-rt"]
timer = ["dep:mm1-timer", "dep:mm1-proto-timer"]

[dependencies]
mm1-address = { workspace = true }
mm1-common = {workspace = true, features = ["futures"] }
mm1-core = { workspace = true }
mm1-message-codec = { workspace = true, optional = true }
mm1-message-codec-serde = { workspace = true, optional = true }
mm1-multinode = { workspace = true, optional = true }
mm1-node = { workspace = true, optional = true }
mm1-proto = { workspace = true }
mm1-proto-system = { workspace = true }
mm1-proto-sup = { workspace = true, optional = true }
mm1-proto-timer = { workspace = true, optional = true }
mm1-sup = { workspace = true, optional = true }
mm1-test-rt = { workspace = true, optional = true }
mm1-timer = {workspace = true, optional = true }

[dev-dependencies]
mm1-logger = { workspace = true }

tokio = {workspace = true, features = ["rt", "macros"]}
thiserror.workspace = true



[workspace]
resolver = "3"
members = [ 
    ".",
    "components/*",
    "core/*",
    "libs/*",
    "protocols/*",
]

[workspace.dependencies]
mm1-core = {path = "core/mm1-core", version = "=0.6.1" }
mm1-node = {path = "core/mm1-node", version = "=0.6.1" }
mm1-test-rt = {path = "core/mm1-test-rt", version = "=0.6.1" }

mm1-multinode = {path = "components/mm1-multinode", version = "=0.6.1" }
mm1-sup = {path = "components/mm1-sup", version = "=0.6.1" }
mm1-timer = {path = "components/mm1-timer", version = "=0.6.1" }

mm1-address = {path = "libs/mm1-address", version = "=0.6.1" }
mm1-ask = {path = "libs/mm1-ask", version = "=0.6.1" }
mm1-common = {path = "libs/mm1-common", version = "=0.6.1" }
mm1-logger = {path = "libs/mm1-logger", version = "=0.6.1" }
mm1-message-codec = {path = "libs/mm1-message-codec", version = "=0.6.1" }
mm1-message-codec-serde = {path = "libs/mm1-message-codec-serde", version = "=0.6.1" }
mm1-proc-macros = {path = "libs/mm1-proc-macros", version = "=0.6.1" }

mm1-proto = {path = "protocols/mm1-proto", version = "=0.6.1" }
mm1-proto-ask = {path = "protocols/mm1-proto-ask", version = "=0.6.1" }
mm1-proto-sup = {path = "protocols/mm1-proto-sup", version = "=0.6.1" }
mm1-proto-system = {path = "protocols/mm1-proto-system", version = "=0.6.1" }
mm1-proto-timer = {path = "protocols/mm1-proto-timer", version = "=0.6.1" }

derive_more = "^2.0"
either = "^1.15.0"
eyre = "^0.6"
futures = "^0.3"
insta = {version = "^1.43", features = ["yaml"]}
parking_lot = "^0.12"
pin-project = "^1.1.10"
pretty_env_logger = "^0.5"
serde = "^1.0"
serde_json = "^1.0"
slotmap = "^1.0"
smallvec = "^1.15"
test-case = "^3.3.1"
thiserror = "^2.0"
tokio = "^1.45.1"
tracing = "^0.1"
