[package]
name = "mm1-message-codec-serde"
version = "0.6.0"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[features]
default = ["json"]
json = ["dep:serde_json"]

[dependencies]
mm1-proc-macros.workspace = true

mm1-address = {workspace = true, features = ["serde"], version = "0.6.0" }
mm1-core.workspace = true
mm1-message-codec.workspace = true

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true, optional = true}

[dev-dependencies]
insta.workspace = true
