[package]
name = "mm1-multinode"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true

[features]
default = []
format-json = []
format-bincode = ["dep:bincode"]
format-rmp = ["dep:rmp-serde"]

[dependencies]
mm1-address.workspace = true
mm1-ask.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true
mm1-runnable.workspace = true
mm1-sup.workspace = true
mm1-timer.workspace = true

mm1-proto.workspace = true
mm1-proto-ask.workspace = true
mm1-proto-network-management.workspace = true
mm1-proto-sup.workspace = true

bincode = {workspace = true, optional = true, features = ["serde"]}
bytes = {workspace = true, features = ["serde"]}
derive_more = {workspace = true, features = ["debug"]}
futures.workspace = true
rand.workspace = true
rmp-serde = {workspace = true, optional = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
sha3 = {workspace = true}
tokio = {workspace = true, features = ["io-util", "net"]}
tokio-util = {workspace = true, features = ["codec"]}
tracing.workspace = true


