[package]
name = "mm1-multinode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []

[dev-dependencies]
mm1-logger.workspace = true

test-case.workspace = true

[dependencies]
mm1-address.workspace = true
mm1-ask.workspace = true
mm1-common = { workspace = true, features = ["logging"] }
mm1-core.workspace = true
mm1-proto.workspace = true
mm1-runnable.workspace = true
mm1-sup.workspace = true
mm1-timer.workspace = true

mm1-proto-ask.workspace = true
mm1-proto-network-management.workspace = true
mm1-proto-sup.workspace = true
mm1-proto-well-known.workspace = true
mm1-proto-system.workspace = true

bimap.workspace = true
bincode = {workspace = true, features = ["serde"]}
derive_more = {workspace = true, features = ["from"]}
erased-serde = {workspace = true}
eyre.workspace = true
futures.workspace = true
masked.workspace = true
rmp-serde = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde-value = {workspace = true}
slotmap.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["io-util", "net"]}
tokio-util = {workspace = true, features = ["codec"]}
trait-set.workspace = true
zerocopy = {workspace = true, features = ["derive"]}
