[package]
name = "mm1-name-service"
version = "0.6.2"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[features]
default = []

[dependencies]
mm1-address.workspace = true
mm1-ask.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto-ask.workspace = true
mm1-proto-named.workspace = true
mm1-proto-well-known.workspace = true

either.workspace = true
tokio = {workspace = true, features = ["time"]}
