[package]
name = "mm1-name-service"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
mm1-address.workspace = true
mm1-ask.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto-ask.workspace = true
mm1-proto-named.workspace = true
mm1-proto-well-known.workspace = true

either.workspace = true
tokio = {workspace = true, features = ["time"]}
