[package]
name = "mm1-sup"
version = "0.6.0"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[dependencies]
mm1-address.workspace = true
mm1-common = {workspace = true, features = ["logging"], version = "0.6.0" }
mm1-core.workspace = true
mm1-proto.workspace = true
mm1-proto-sup.workspace = true
mm1-proto-system.workspace = true

either.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["time"]}

[dev-dependencies]
mm1-node.workspace = true
mm1-logger.workspace = true
mm1-test-rt.workspace = true

insta.workspace = true
test-case.workspace = true
tokio = {workspace = true, features = ["time", "rt", "macros", "test-util"]}
