[package]
name = "mm1-sup"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[dependencies]
mm1-address.workspace = true
mm1-ask.workspace = true
mm1-common = {workspace = true, features = ["logging"]}
mm1-core.workspace = true
mm1-proto.workspace = true
mm1-proto-ask.workspace = true
mm1-proto-sup.workspace = true
mm1-proto-system.workspace = true
mm1-runnable.workspace = true

either.workspace = true
eyre.workspace = true
parking_lot.workspace = true
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
tokio = {workspace = true, features = ["time"]}

[dev-dependencies]
mm1-logger.workspace = true

insta.workspace = true
test-case.workspace = true
