[package]
name = "mm1-timer"
version = "0.6.4"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[features]
default = ["tokio-time"]
tokio-time = ["tokio/time"]

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto.workspace = true
mm1-proto-timer.workspace = true

futures.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["rt", "macros"]}

