[package]
name = "mm1-timer"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
mm1-address.workspace = true
mm1-ask.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto.workspace = true
mm1-proto-ask.workspace = true

futures.workspace = true
serde = {workspace = true, features = ["derive"]}
slotmap = {workspace = true, features = ["serde"]}
thiserror.workspace = true
tokio = {workspace = true, features = ["rt", "macros", "time"]}

