[package]
name = "mm1-core"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true


[features]
default = ["test-util"]
test-util = []

[dependencies]
mm1-common = {workspace = true, features = ["logging", "futures"]}
mm1-address.workspace = true
mm1-proto.workspace = true
mm1-proto-system.workspace = true

mm1-proc-macros.workspace = true

futures.workspace = true
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
tokio = {workspace = true, features = ["time", "macros"]}
tracing.workspace = true


