[package]
name = "mm1-node"
version = "0.5.4"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[features]
default = ["serde"]
serde = ["dep:serde", "mm1-address/serde"]

[dependencies]
mm1-common = {workspace = true, features = ["futures", "logging"]}
mm1-core.workspace = true
mm1-proto.workspace = true
mm1-proto-system.workspace = true
mm1-address.workspace = true

# mm1-proc-macros.workspace = true

async-channel = {version = "^2.1"}
either.workspace = true
futures.workspace = true
num_cpus = "^1"
pin-project.workspace = true
scc = "^2.2.5"
serde = {workspace = true, optional = true, features = ["derive"]}
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "net"] }
tracing.workspace = true

[dev-dependencies]
mm1-logger.workspace = true

tokio = {workspace = true, features = ["rt", "rt-multi-thread", "macros"]}
serde_yaml = "^0.9"
