[package]
name = "mm1-node"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true

[features]
default = []
name-service = ["dep:mm1-proto-well-known", "dep:mm1-name-service"]
multinode = ["name-service", "dep:mm1-proto-well-known", "dep:mm1-multinode"]

[dev-dependencies]
insta.workspace = true
test-case.workspace = true
serde_yaml.workspace = true

[dependencies]
mm1-address = { workspace = true}
mm1-ask.workspace = true
mm1-common = {workspace = true, features = ["futures", "logging"]}
mm1-core.workspace = true
mm1-proto.workspace = true
mm1-proto-network-management.workspace = true
mm1-proto-system.workspace = true
mm1-runnable.workspace = true
mm1-proto-well-known = {workspace = true, optional = true }
mm1-multinode = {workspace = true, features = [], optional = true }
mm1-name-service = {workspace = true, features = [], optional = true }

# mm1-proc-macros.workspace = true

derive_more = {workspace = true, features = ["debug", "from"]}
either.workspace = true
eyre.workspace = true
futures.workspace = true
num_cpus = "^1"
pin-project.workspace = true
scc = "^2.3.4"
serde = {workspace = true, features = ["derive"]}
# serde_json = {workspace = true, optional = true}
serde-value.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "net"] }
tracing.workspace = true
url.workspace = true

