[package]
name = "mm1-runnable"
version = "0.6.2"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[features]
default = ["test-util"]
test-util = []

[dependencies]
mm1-common = {workspace = true, features = ["logging", "futures"] }
mm1-core.workspace = true

[dev-dependencies]
mm1-ask.workspace = true
mm1-proto-ask.workspace = true
eyre.workspace = true

