[package]
name = "mm1-runnable"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true

[features]
default = ["test-util"]
test-util = []

[dependencies]
mm1-common = {workspace = true, features = ["logging", "futures"] }
mm1-core.workspace = true
