[package]
name = "mm1-test-rt"
version = "0.5.4"
edition = "2024"

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto-system.workspace = true

derive_more = { workspace = true, features = ["debug", "from", "try_into"] }
futures.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["sync", "time"]}

[dev-dependencies]
tokio = {workspace = true, features = ["test-util"]}
mm1-logger.workspace = true