[package]
name = "mm1-test-rt"
version = "0.6.1"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto-system.workspace = true

derive_more = { workspace = true, features = ["debug", "from", "try_into"] }
futures.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["sync", "time"]}

[dev-dependencies]
tokio = {workspace = true, features = ["test-util"]}
mm1-logger.workspace = true
