[package]
name = "mm1-test-rt"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-core.workspace = true

mm1-proto.workspace = true
mm1-proto-system.workspace = true

derive_more = { workspace = true, features = ["debug", "from", "try_into"] }
futures.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["sync", "time"]}

