[package]
name = "mm1-address"
version = "0.6.0"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[features]
default = []

[dependencies]
mm1-common.workspace = true

either.workspace = true
parking_lot.workspace = true
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true

[dev-dependencies]

insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
