[package]
name = "mm1-logger"
version = "0.5.2"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[dependencies]
serde = {workspace = true, features = ["derive"]}
structopt = "^0.3"
tracing.workspace = true
tracing-subscriber = "^0.3"
