[package]
name = "mm1-proto-sup"
version = "0.5.2"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[dependencies]
mm1-address.workspace = true
mm1-common.workspace = true
mm1-proto.workspace = true
mm1-proto-system.workspace = true
