[package]
name = "mm1-proto"
version = "0.5.3"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[features]
default = ["test-util"]
test-util = []

[dependencies]
mm1-proc-macros.workspace = true

mm1-common.workspace = true

either.workspace = true
# thiserror.workspace = true
parking_lot.workspace = true
serde.workspace = true

[dev-dependencies]
# eyre.workspace = true
# tokio = {workspace = true, features = ["time"]}

