[package]
name = "mm1-sup"
version = "0.5.4"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[dependencies]
mm1-address.workspace = true
mm1-common = {workspace = true, features = ["logging"]}
mm1-core.workspace = true
mm1-proto.workspace = true
mm1-proto-sup.workspace = true
mm1-proto-system.workspace = true

parking_lot.workspace = true
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true

[dev-dependencies]
mm1-node.workspace = true
mm1-logger.workspace = true

tokio = {workspace = true, features = ["time", "rt", "macros"]}
