[package]
name = "mm1"
version = "0.6.0"
edition = "2021"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"


[dependencies]
mm1-address.workspace = true
mm1-common = {workspace = true, features = ["futures"] }
mm1-core.workspace = true
mm1-node.workspace = true
mm1-proto.workspace = true
mm1-proto-system.workspace = true
mm1-proto-sup.workspace = true
mm1-sup.workspace = true

[dev-dependencies]
mm1-logger.workspace = true
tokio = {workspace = true, features = ["rt", "macros"]}
thiserror.workspace = true
