[package]
name = "mm1-address"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
mm1-proto.workspace = true
parking_lot.workspace = true
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true

[dev-dependencies]

insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
