[package]
name = "mm1-ask"
version = "0.6.1"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[dependencies]
mm1-proto-ask.workspace = true

mm1-address.workspace = true
mm1-common = { workspace = true, features = ["futures"] }
mm1-core.workspace = true

derive_more = {workspace = true, features = ["from"] }

[dev-dependencies]
mm1-test-rt.workspace = true

tokio = {workspace = true, features = ["rt", "macros", "test-util"]}