[package]
name = "mm1-ask"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[dependencies]
mm1-proto.workspace = true
mm1-proto-ask.workspace = true

mm1-address.workspace = true
mm1-common = { workspace = true, features = ["futures"]}
mm1-core.workspace = true

derive_more = {workspace = true, features = ["from"] }
metrics.workspace = true
tracing.workspace = true
