[package]
name = "mm1-common"
version = "0.6.0"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

[features]
default = []
futures = ["tokio/time"]
logging = ["tracing"]

[dependencies]
mm1-proc-macros.workspace = true

pin-project.workspace = true
thiserror.workspace = true
tokio = {workspace = true, optional = true}
tracing = {workspace = true, optional = true}
