[package]
name = "mm1-common"
version = "0.6.4"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[features]
default = []
futures = ["tokio/time"]
logging = ["tracing"]

[dependencies]
mm1-proto.workspace = true

pin-project.workspace = true
serde = {workspace = true, features = ["derive", "rc"]}
thiserror.workspace = true
tokio = {workspace = true, optional = true}
tracing = {workspace = true, optional = true}
