[package]
name = "mm1-common"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []
futures = ["tokio/time"]
logging = ["tracing"]

[dependencies]
mm1-proto.workspace = true

derive_more = { workspace = true, features = ["debug"] }
eyre.workspace = true
metrics.workspace = true
pin-project.workspace = true
serde = {workspace = true, features = ["derive", "rc"]}
thiserror.workspace = true
tokio = {workspace = true, optional = true}
tracing = {workspace = true, optional = true}
