[package]
name = "mm1-logger"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
structopt = "^0.3"
tracing.workspace = true
tracing-subscriber = "^0.3"
