[package]
name = "mm1-logger"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[dependencies]
clap = {workspace = true}
serde = {workspace = true, features = ["derive"]}
tracing.workspace = true
tracing-subscriber = "^0.3"
