[package]
name = "mm1-proc-macros"
version = "0.6.2"
edition = "2024"

license = "MIT"
authors = ["That Roma <mm1@thatroma.me>"]
repository = "https://github.com/agner-rs/mm1"
description = "M/M/1! Queueing, do you speak it?!"

exclude = ["**/*.snap"]

[lib]
proc-macro = true

[dependencies]
either.workspace = true
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
