[package]
name = "mm1-proc-macros"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
either.workspace = true
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
