[package]
name = "mm1-proto-ask"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
exclude.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
mm1-address.workspace = true
mm1-proto.workspace = true

serde = {workspace = true, features = ["derive"]}
